# apple-silicon-bio-bench

./: .gitignore  AMX_PILOT_READY.md  BIOFAST_VISION.md  CITATION.cff  CLAUDE.md  CURRENT_STATUS.md  Cargo.toml  DAG_FRAMEWORK.md  DEMOCRATIZING_BIOINFORMATICS_COMPUTE.md  DOCUMENTATION_ALIGNMENT_SUMMARY.md  DOCUMENTATION_AUDIT.md  DOCUMENTATION_AUDIT_2025-11-03.md  DOCUMENTATION_CLEANUP_PLAN.md  DOCUMENTATION_REVIEW_AND_NEXT_STEPS.md  EXPERIMENTAL_SUMMARY.md  GRAVITON_VALIDATION_READY.md  LICENSE  METHODOLOGY.md  METHODOLOGY_VS_DAG_REVIEW.md  NETWORK_STREAMING_VISION.md  NEXT_STEPS.md  OPTIMIZATION_RULES.md  PARALLEL_PILOT_READY.md  PHASE1_DAY2_SUMMARY.md  PILOT_CHECKPOINT.md  POWER_PILOT_READY.md  PUBLICATION_READINESS_ASSESSMENT.md  PUBLICATION_SUMMARY.md  README.md  REALISTIC_VALUE_ASSESSMENT.md  ROADMAP.md  STATISTICAL_RIGOR_PLAN.md  analyze_composition.py  phase2_complete_results.txt
.claude/hooks/: README.md  after-context-compact.sh  before-context-compact.sh  session-start.sh  tool-call.sh  user-prompt-submit.sh
.githooks/: pre-commit
analysis/: analyze_amx.py  analyze_parallel.py  compare_mac_graviton.py  complexity_regression.py  extract_mac_baseline.py  generate_graviton_findings.py  generate_power_findings.py  generate_publication_plots.py  n5_complexity_data.csv  parse_powermetrics.py
archive/2025-11-03-pre-biofast-pivot/: ISSUES.md  STREAMING_ASSESSMENT.md  WEEK1_DAY1_BREAKDOWN.md
crates/asbb-analysis/: Cargo.toml
crates/asbb-cli/: Cargo.toml
crates/asbb-cli/shaders/: deflate_decode.metal  memory_copy.metal
crates/asbb-cli/src/: dag_traversal.rs  main.rs  pilot.rs  pilot_2bit.rs  pilot_amx.rs  pilot_at_content.rs  pilot_complexity_score.rs  pilot_composition.rs  pilot_compression.rs  pilot_gc.rs  pilot_gpu.rs  pilot_gpu_complexity.rs  pilot_gpu_quality.rs  pilot_gpu_revcomp.rs  pilot_graviton.rs  pilot_length_filter.rs  pilot_memory_footprint.rs  pilot_n_content.rs  pilot_parallel.rs  pilot_power.rs  pilot_quality.rs  pilot_quality_filter.rs  pilot_revcomp.rs  pilot_scales.rs  pilot_sequence_length.rs  run_level1.rs  test_sequence_masking.rs  test_single_experiment.rs
crates/asbb-core/: Cargo.toml
crates/asbb-core/src/: encoding.rs  lib.rs  operation_registry.rs
crates/asbb-datagen/: Cargo.toml
crates/asbb-explorer/: Cargo.toml
crates/asbb-explorer/src/: benchmark.rs  execution_engine.rs  lib.rs  runner.rs
crates/asbb-gpu/: Cargo.toml
crates/asbb-gpu/src/: kernels.rs  lib.rs
crates/asbb-gpu/src/shaders/: operations.metal
crates/asbb-ops/: Cargo.toml
crates/asbb-ops/src/: adapter_trimming.rs  at_content.rs  base_counting.rs  complexity_score.rs  compression.rs  edit_distance.rs  fastq_parsing.rs  gc_content.rs  gcd.rs  hamming_distance.rs  kmer_counting.rs  kmer_extraction.rs  length_filter.rs  lib.rs  minhash_sketching.rs  n_content.rs  quality_aggregation.rs  quality_filter.rs  quality_statistics.rs  reverse_complement.rs  sequence_length.rs  sequence_masking.rs  translation.rs
crates/asbb-rules/: Cargo.toml
datasets/: generate_all_scales.sh  medium_10k_150bp.fq.bgz
datasets/generation-scripts/: Cargo.toml  README.md
datasets/generation-scripts/datasets/: test_100.fq
datasets/generation-scripts/src/: main.rs
docs/: COMPLEXITY_METRIC.md  M5_INTEGRATION.md  METAL_BGZIP_INVESTIGATION.md  METAL_PHASE2_PLAN.md  mac_studio_hardware_recommendation.md
docs/archive/: README.md
experiments/composition_validation/: FINDINGS.md  IMPLEMENTATION_STATUS.md  protocol.md
experiments/cross_platform_graviton/: protocol.md
experiments/io_overhead/: PROTOCOL.md
experiments/level1_primitives/: DESIGN.md  IMPLEMENTATION_STATUS.md  config.toml
experiments/phase1_amx_dimension/: implementation_research.md  protocol.md
experiments/phase1_gcd_qos/: DECISION.md  feasibility_assessment.md  protocol.md
experiments/phase1_gpu_dimension/: protocol.md
experiments/phase1_hardware_compression/: RESULTS_SUMMARY.md  compression_ratio_precheck_results.md  prepare_compressed_datasets.sh  protocol.md  test_compression_ratios.sh
experiments/phase1_neural_dimension/: DECISION_SUMMARY.md  implementation_research.md  protocol.md
experiments/phase1_parallel_dimension/: README.md  protocol.md
experiments/phase1_power_consumption/: protocol.md
experiments/phase2_2bit_encoding/: protocol.md
experiments/streaming/: PROTOCOL.md
lab-notebook/: INDEX.md
lab-notebook/2025-10/: 20251030-001-TEST-hook-validation.md  20251030-007-EXPERIMENT-quality-aggregation-n4.md  20251030-008-EXPERIMENT-n-content-n5.md  20251031-009-EXPERIMENT-gpu-dimension.md  20251031-010-EXPERIMENT-2bit-encoding.md  20251031-011-EXPERIMENT-parallel-dimension.md
lab-notebook/2025-11/: 20251101-012-CHECKPOINT-phase1-complete.md  20251101-013-IMPLEMENTATION-sequence-masking.md  20251101-014-IMPLEMENTATION-level1-complete.md  20251102-015-EXPERIMENT-amx-dimension.md  20251102-016-EXPERIMENT-hardware-compression.md  20251102-017-EXPERIMENT-memory-footprint.md  20251102-018-ANALYSIS-phase1-complete.md  20251102-019-DOCS-amx-composition-update.md  20251102-020-EXPERIMENT-power-consumption-pilot.md  20251102-021-EXPERIMENT-graviton-portability.md  20251103-022-IMPLEMENTATION-dag-testing-harness.md  20251103-023-EXPERIMENT-neon-parallel-batch1.md  20251103-024-EXPERIMENT-core-affinity-batch2.md  20251103-027-EXPERIMENT-streaming-overhead.md  (+8 more)
reference/: README.md
results/: 72_experiments_reflection.md  72_experiments_reflection_with_external_validation.md  AUTONOMOUS_ANALYSIS_COMPLETE.md  PHASE1_COMPLETE_ANALYSIS.md  at_content_pilot.txt  combined_optimization_findings.md  complexity_score_pilot.txt  gc_content_findings.md  gc_content_pilot.txt  length_filter_pilot.txt  n10_regression_analysis.txt  parallel_dimension_raw_20251031_152922.csv  parallel_log_20251031_152922.txt  quality_filter_pilot.txt  quality_pilot.txt  revcomp_pilot.txt  sequence_length_pilot.txt
scripts/: cleanup_after_power_test.sh  graviton_download.sh  graviton_full_automation.sh  graviton_launch.sh  graviton_run.sh  graviton_setup.sh  graviton_terminate.sh  prepare_for_power_test.sh  run_power_pilot.sh
(+95 files in other folders)
