[workspace]
members = [
    "crates/asbb-core",
    "crates/asbb-datagen",
    "crates/asbb-ops",
    "crates/asbb-explorer",
    "crates/asbb-analysis",
    "crates/asbb-rules",
    "crates/asbb-cli",
    "crates/asbb-gpu",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Scott Handley <shandley@wustl.edu>"]
license = "Apache-2.0"
repository = "https://github.com/shandley/apple-silicon-bio-bench"

[workspace.dependencies]
# Core dependencies
anyhow = "1.0"
thiserror = "1.0"
log = "0.4"
env_logger = "0.11"

# Async runtime
tokio = { version = "1.0", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# CLI
clap = { version = "4.0", features = ["derive", "cargo"] }

# Random number generation
rand = "0.8"
rand_distr = "0.4"

# Data structures
dashmap = "5.5"
crossbeam = "0.8"

# Parallel processing
rayon = "1.8"

# Statistics and ML
statrs = "0.16"
linfa = "0.7"
linfa-trees = "0.7"
ndarray = "0.15"

# Data storage
polars = { version = "0.36", features = ["parquet", "lazy"] }
arrow2 = "0.18"

# Benchmarking
criterion = { version = "0.5", features = ["html_reports"] }

# Testing
proptest = "1.4"
