[package]
name = "asbb-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "ASBB cli component"

[dependencies]
asbb-core = { path = "../asbb-core" }
asbb-ops = { path = "../asbb-ops" }
asbb-explorer = { path = "../asbb-explorer" }
anyhow.workspace = true
clap.workspace = true

[[bin]]
name = "asbb-pilot"
path = "src/pilot.rs"

[[bin]]
name = "asbb-pilot-scales"
path = "src/pilot_scales.rs"

[[bin]]
name = "asbb-pilot-gc"
path = "src/pilot_gc.rs"

[[bin]]
name = "asbb-pilot-revcomp"
path = "src/pilot_revcomp.rs"

[[bin]]
name = "asbb-pilot-quality"
path = "src/pilot_quality.rs"

[[bin]]
name = "asbb-pilot-ncontent"
path = "src/pilot_n_content.rs"

[[bin]]
name = "asbb-pilot-seqlen"
path = "src/pilot_sequence_length.rs"

[[bin]]
name = "asbb-pilot-at"
path = "src/pilot_at_content.rs"

[[bin]]
name = "asbb-pilot-qfilter"
path = "src/pilot_quality_filter.rs"

[[bin]]
name = "asbb-pilot-lenfilter"
path = "src/pilot_length_filter.rs"

[[bin]]
name = "asbb-pilot-complexity"
path = "src/pilot_complexity_score.rs"
