[package]
name = "asbb-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "ASBB cli component"

[dependencies]
asbb-core = { path = "../asbb-core" }
asbb-ops = { path = "../asbb-ops" }
asbb-explorer = { path = "../asbb-explorer" }
anyhow.workspace = true
clap.workspace = true
core_affinity = "0.8"
serde.workspace = true
serde_json.workspace = true
rand = "0.8"

[features]
default = []
gpu = ["asbb-ops/gpu"]

[[bin]]
name = "asbb-pilot"
path = "src/pilot.rs"

[[bin]]
name = "asbb-pilot-scales"
path = "src/pilot_scales.rs"

[[bin]]
name = "asbb-pilot-gc"
path = "src/pilot_gc.rs"

[[bin]]
name = "asbb-pilot-revcomp"
path = "src/pilot_revcomp.rs"

[[bin]]
name = "asbb-pilot-quality"
path = "src/pilot_quality.rs"

[[bin]]
name = "asbb-pilot-ncontent"
path = "src/pilot_n_content.rs"

[[bin]]
name = "asbb-pilot-seqlen"
path = "src/pilot_sequence_length.rs"

[[bin]]
name = "asbb-pilot-at"
path = "src/pilot_at_content.rs"

[[bin]]
name = "asbb-pilot-qfilter"
path = "src/pilot_quality_filter.rs"

[[bin]]
name = "asbb-pilot-lenfilter"
path = "src/pilot_length_filter.rs"

[[bin]]
name = "asbb-pilot-complexity"
path = "src/pilot_complexity_score.rs"

[[bin]]
name = "asbb-pilot-2bit"
path = "src/pilot_2bit.rs"

[[bin]]
name = "asbb-pilot-gpu"
path = "src/pilot_gpu.rs"

[[bin]]
name = "asbb-pilot-gpu-revcomp"
path = "src/pilot_gpu_revcomp.rs"

[[bin]]
name = "asbb-pilot-gpu-quality"
path = "src/pilot_gpu_quality.rs"

[[bin]]
name = "asbb-pilot-gpu-complexity"
path = "src/pilot_gpu_complexity.rs"

[[bin]]
name = "asbb-pilot-parallel"
path = "src/pilot_parallel.rs"

[[bin]]
name = "test-sequence-masking"
path = "src/test_sequence_masking.rs"
