[package]
name = "asbb-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "ASBB cli component"

[dependencies]
asbb-core = { path = "../asbb-core" }
asbb-ops = { path = "../asbb-ops" }
asbb-explorer = { path = "../asbb-explorer" }
anyhow.workspace = true
clap.workspace = true
core_affinity = "0.8"
serde.workspace = true
serde_json.workspace = true
rand = "0.8"
rand_chacha = "0.3"
rayon.workspace = true
chrono = "0.4"
flate2 = "1.0"
zstd = "0.13"
metal = "0.32.0"
objc = "0.2.7"
memmap2 = "0.9"
libc = "0.2"

[features]
default = []
gpu = ["asbb-ops/gpu"]

[[bin]]
name = "asbb-pilot"
path = "src/pilot.rs"

[[bin]]
name = "asbb-pilot-scales"
path = "src/pilot_scales.rs"

[[bin]]
name = "asbb-pilot-gc"
path = "src/pilot_gc.rs"

[[bin]]
name = "asbb-pilot-revcomp"
path = "src/pilot_revcomp.rs"

[[bin]]
name = "asbb-pilot-quality"
path = "src/pilot_quality.rs"

[[bin]]
name = "asbb-pilot-ncontent"
path = "src/pilot_n_content.rs"

[[bin]]
name = "asbb-pilot-seqlen"
path = "src/pilot_sequence_length.rs"

[[bin]]
name = "asbb-pilot-at"
path = "src/pilot_at_content.rs"

[[bin]]
name = "asbb-pilot-qfilter"
path = "src/pilot_quality_filter.rs"

[[bin]]
name = "asbb-pilot-lenfilter"
path = "src/pilot_length_filter.rs"

[[bin]]
name = "asbb-pilot-complexity"
path = "src/pilot_complexity_score.rs"

[[bin]]
name = "asbb-pilot-2bit"
path = "src/pilot_2bit.rs"

[[bin]]
name = "asbb-pilot-gpu"
path = "src/pilot_gpu.rs"

[[bin]]
name = "asbb-pilot-gpu-revcomp"
path = "src/pilot_gpu_revcomp.rs"

[[bin]]
name = "asbb-pilot-gpu-quality"
path = "src/pilot_gpu_quality.rs"

[[bin]]
name = "asbb-pilot-gpu-complexity"
path = "src/pilot_gpu_complexity.rs"

[[bin]]
name = "asbb-pilot-parallel"
path = "src/pilot_parallel.rs"

[[bin]]
name = "test-sequence-masking"
path = "src/test_sequence_masking.rs"

[[bin]]
name = "run-level1"
path = "src/run_level1.rs"

[[bin]]
name = "test-single-experiment"
path = "src/test_single_experiment.rs"

[[bin]]
name = "asbb-pilot-amx"
path = "src/pilot_amx.rs"

[[bin]]
name = "asbb-pilot-compression"
path = "src/pilot_compression.rs"

[[bin]]
name = "asbb-pilot-composition"
path = "src/pilot_composition.rs"

[[bin]]
name = "asbb-pilot-memory"
path = "src/pilot_memory_footprint.rs"

[[bin]]
name = "asbb-pilot-power"
path = "src/pilot_power.rs"

[[bin]]
name = "asbb-pilot-graviton"
path = "src/pilot_graviton.rs"

[[bin]]
name = "asbb-dag-traversal"
path = "src/dag_traversal.rs"

[[bin]]
name = "io-overhead-benchmark"
path = "src/bin/io_overhead_benchmark.rs"

[[bin]]
name = "streaming-memory-benchmark"
path = "src/bin/streaming_memory_benchmark.rs"

[[bin]]
name = "streaming-memory-benchmark-v2"
path = "src/bin/streaming_memory_benchmark_v2.rs"

[[bin]]
name = "streaming-overhead-benchmark"
path = "src/bin/streaming_overhead_benchmark.rs"

[[bin]]
name = "streaming-e2e-benchmark"
path = "src/bin/streaming_e2e_benchmark.rs"

[[bin]]
name = "bgzip-parallel-benchmark"
path = "src/bin/bgzip_parallel_benchmark.rs"

[[bin]]
name = "metal-feasibility-test"
path = "src/bin/metal_feasibility_test.rs"

[[bin]]
name = "metal-deflate-benchmark"
path = "src/bin/metal_deflate_benchmark.rs"

[[bin]]
name = "mmap-io-benchmark"
path = "src/bin/mmap_io_benchmark.rs"

[[bin]]
name = "mmap-scale-benchmark"
path = "src/bin/mmap_scale_benchmark.rs"
