[package]
name = "asbb-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Core types and traits for Apple Silicon Bio Bench"

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
