[package]
name = "asbb-explorer"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "ASBB explorer component"

[dependencies]
asbb-core = { path = "../asbb-core" }
asbb-ops = { path = "../asbb-ops" }
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
