[package]
name = "asbb-gpu"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "GPU (Metal) backend for Apple Silicon Bio Bench"

[dependencies]
asbb-core = { path = "../asbb-core" }
metal = "0.29"
objc = "0.2"
anyhow.workspace = true
thiserror = "1.0"

[build-dependencies]
cc = "1.0"

[dev-dependencies]
