[package]
name = "asbb-ops"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "ASBB ops component"

[dependencies]
asbb-core = { path = "../asbb-core" }
anyhow.workspace = true
rayon.workspace = true
serde.workspace = true
serde_json.workspace = true

# GPU support (macOS only)
[target.'cfg(target_os = "macos")'.dependencies]
asbb-gpu = { path = "../asbb-gpu", optional = true }

[features]
default = []
gpu = ["asbb-gpu"]
