[package]
name = "asbb-ops"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "ASBB ops component"

[dependencies]
asbb-core = { path = "../asbb-core" }
anyhow.workspace = true
rayon.workspace = true
serde.workspace = true
serde_json.workspace = true

# Compression support (Hardware Compression pilot)
flate2 = "1.0"  # gzip decompression (software baseline)
zstd = "0.13"   # zstd decompression (fast compression)

# GPU support (macOS only)
[target.'cfg(target_os = "macos")'.dependencies]
asbb-gpu = { path = "../asbb-gpu", optional = true }

# Accelerate framework for AMX support (macOS only)
[target.'cfg(all(target_os = "macos", target_arch = "aarch64"))'.dependencies]
accelerate-src = "0.3"

[features]
default = []
gpu = ["asbb-gpu"]
